--- a/public/css/index.css
+++ b/public/css/index.css
@@ -9,6 +9,16 @@ body {
   margin-bottom: 0px;
 }
 
+.row{
+  margin-right: 0px;
+}
+
+.navbar{
+  background-color: orange;
+  margin: 0px;
+  padding: 0px;
+}
+
 .banner1{
   color: #fff;
 }
