delete bootstrap 3 and adding bootstrap 4 built structure folder for sass

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -25,19 +25,23 @@ body {
   color: #fff;
 }
 
-.navbar-default{
-  color: #fff;
-}
-
-.navbar-nav{
-  color: #fff;
-}
-
 .banner1{
   color: #fff;
 }
 
+.banner2{
+  background-color: #FF9800;
+  margin-bottom: 0px;
+}
+
+.banner3{
+  background-color: #FF7F50;
+  margin-bottom: 0px;
+}
+
+
 .betweenText {
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
+  fontSize: 15px;
 }
