--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,21 +10,6 @@
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
   --line: 1px solid var(--color-grey-light-2); }
 
-:root {
-  --color-primary: #eb2f64;
-  --color-primary-light: #FF3366;
-  --color-primary-dark: #BA265D;
-  --color-grey-light-1: #faf9f9;
-  --color-grey-light-2: #f4f2f2;
-  --color-grey-light-3: #f0eeee;
-  --color-grey-light-4: #ccc;
-  --color-grey-dark-1: #333;
-  --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999;
-  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
-  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
-  --line: 1px solid var(--color-grey-light-2); }
-
 * {
   margin: 0;
   padding: 0; }
@@ -46,9 +31,6 @@ body {
   font-weight: 400;
   line-height: 1.6;
   color: var(--color-grey-dark-2);
-  background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
-  background-size: cover;
-  background-repeat: no-repeat;
   min-height: 100vh; }
 
 .logo {
@@ -440,11 +422,14 @@ body {
     animation: pulsate 1s infinite; }
 
 .container {
-  max-width: 120rem;
-  margin: 8rem auto;
+  max-width: 50rem;
+  min-width: 25rem;
+  min-height: 50rem;
+  min-height: 10rem;
+  padding: 10rem;
+  margin: 1rem;
   background-color: var(--color-grey-light-1);
-  box-shadow: var(--shadow-dark);
-  min-height: 50rem; }
+  box-shadow: var(--shadow-dark); }
   @media only screen and (max-width: 75em) {
     .container {
       margin: 0;
