--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -7,7 +7,7 @@
 @import "base/typography";
 @import "base/utilities";
 
-@import "components/button";
+@import "components/components";
 @import "components/form";
 
 @import "layout/footer";
