fixing login and unfinish sign up

--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -422,6 +422,7 @@ body {
     animation: pulsate 1s infinite; }
 
 .container {
+  max-width: 50rem;
   min-width: 25rem;
   min-height: 50rem;
   min-height: 10rem;
