--- a/public/sass/components/_components.scss
+++ b/public/sass/components/_components.scss
@@ -7,6 +7,12 @@
 
 .logoz{
     background-color: var(--color-primary-2);
+    margin: 0rem;
+    padding: 0rem;
+}
+.jumbo{
+  background-color: #000;
+  margin: 0rem;
 }
 
 ////////////////////////////////////////
