landing page V1 fixing some styles

--- a/public/sass/layout/_navigation.scss
+++ b/public/sass/layout/_navigation.scss
@@ -1,9 +1,7 @@
 .container {
-    max-width: 50rem;
-    min-width: 25rem;
+    width: 50rem;
 
-    min-height: 50rem;
-    min-height: 10rem;
+    height: 50rem;
 
     padding: 10rem;
 
