--- a/public/sass/components/_components.scss
+++ b/public/sass/components/_components.scss
@@ -5,333 +5,35 @@
     margin-left: 2rem;
 }
 
-.logoz{
-    background-color: var(--color-primary-2);
-    margin: 0rem;
-    padding: 0rem;
-}
-.jumbo{
-  background-color: #000;
-  margin: 0rem;
+.col-sm-6{
+  padding-right: 0;
 }
 
-////////////////////////////////////////
-// SEARCH
-.search {
-    flex: 0 0 40%;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    @media only screen and (max-width: $bp-smallest) {
-        order: 1;
-        flex: 0 0 100%;
-        background-color: var(--color-grey-light-2);
-    }
-
-    &__input {
-        font-family: inherit;
-        font-size: inherit;
-        color: inherit;
-        background-color: var(--color-grey-light-2);
-        border: none;
-        padding: .7rem 2rem;
-        border-radius: 100px;
-        width: 90%;
-        transition: all .2s;
-        margin-right: -3.25rem;
-
-        &:focus {
-            outline: none;
-            width: 100%;
-            background-color: var(--color-grey-light-3);
-        }
-
-        &::-webkit-input-placeholder {
-            font-weight: 100;
-            color: var(--color-grey-light-4);
-        }
-    }
-
-    &__input:focus + &__button {
-        background-color: var(--color-grey-light-3);
-    }
-
-    &__button {
-        border: none;
-        background-color: var(--color-grey-light-2);
-
-        &:focus {
-            outline: none;
-        }
-
-        &:active {
-            transform: translateY(2px);
-        }
-    }
-
-    &__icon {
-        height: 2rem;
-        width: 2rem;
-        fill: var(--color-grey-dark-3);
-    }
+.Bar-Images {
+  width: 100%;
 }
 
-
-////////////////////////////////////////
-// USER NAVIGATION
-.user-nav {
-    align-self: stretch;
-
-    display: flex;
-    align-items: center;
-
-    & > * {
-        padding: 0 2rem;
-        cursor: pointer;
-        height: 100%;
-        display: flex;
-        align-items: center;
-    }
-
-    & > *:hover {
-        background-color: var(--color-grey-light-2);
-    }
-
-    &__icon-box {
-        position: relative;
-    }
-
-    &__icon {
-        height: 2.25rem;
-        width: 2.25rem;
-        fill: var(--color-grey-dark-2);
-    }
-
-    &__notification {
-        font-size: .8rem;
-        height: 1.75rem;
-        width: 1.75rem;
-        border-radius: 50%;
-        background-color: var(--color-primary);
-        color: #fff;
-        position: absolute;
-        top: 1.5rem;
-        right: 1.1rem;
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    &__user-photo {
-        height: 3.75rem;
-        border-radius: 50%;
-        margin-right: 1rem;
-    }
-
+.Bar-Second {
+  background-color: var(--color-primary-2);
+  height: 10rem;
+  clip-path: polygon(50% 0%, 100% 0, 100% 50%, 50% 100%, 0% 50%, 0 0);
 }
 
-
-////////////////////////////////////////
-// SIDE NAVIGATION
-.side-nav {
-    font-size: 1.4rem;
-    list-style: none;
-    margin-top: 3.5rem;
-
-    @media only screen and (max-width: $bp-medium) {
-        display: flex;
-        margin: 0;
-    }
-
-    &__item {
-        position: relative;
-
-        &:not(:last-child) {
-            margin-bottom: .5rem;
-
-            @media only screen and (max-width: $bp-medium) {
-                margin: 0;
-            }
-        }
-
-        @media only screen and (max-width: $bp-medium) {
-            flex: 1;
-        }
-    }
-
-    &__item::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 3px;
-        background-color: var(--color-primary);
-        transform: scaleY(0);
-        transition: transform .2s,
-                    width .4s cubic-bezier(1,0,0,1) .2s,
-                    background-color .1s;
-    }
-
-    &__item:hover::before,
-    &__item--active::before {
-        transform: scaleY(1);
-        width: 100%;
-    }
-
-    &__item:active::before {
-        background-color: var(--color-primary-light);
-    }
-
-    &__link:link,
-    &__link:visited {
-        color: var(--color-grey-light-1);
-        text-decoration: none;
-        text-transform: uppercase;
-        display: block;
-        padding: 1.5rem 3rem;
-        position: relative;
-        z-index: 10;
-
-        display: flex;
-        align-items: center;
-
-        @media only screen and (max-width: $bp-medium) {
-            justify-content: center;
-            padding: 2rem;
-        }
-
-        @media only screen and (max-width: $bp-small) {
-            flex-direction: column;
-            padding: 1.5rem .5rem;
-        }
-    }
-
-    &__icon {
-        width: 1.75rem;
-        height: 1.75rem;
-        margin-right: 2rem;
-        fill: currentColor;
-
-        @media only screen and (max-width: $bp-small) {
-            margin-right: 0;
-            margin-bottom: .7rem;
-            width: 1.5rem;
-            height: 1.5rem;
-        }
-    }
+.Bar-Second-Text {
+  font-size: 4rem;
+  color: var(--color-primary-1);
 }
 
-
-////////////////////////////////////////
-// LEGAL TEXT
-.legal {
-    font-size: 1.2rem;
-    color: var(--color-grey-light-4);
-    text-align: center;
-    padding: 2.5rem;
-
-    @media only screen and (max-width: $bp-medium) {
-        display: none;
-    }
+.Bar-Third {
+  background-color: var(--color-grey-dark-3);
+  height: 10rem;
+  clip-path: polygon(50% 0%, 100% 0, 100% 50%, 50% 100%, 0% 50%, 0 0);
 }
 
-
-////////////////////////////////////////
-// GALLERY
-.gallery {
-    display: flex;
-
-    &__photo {
-        width: 100%;
-        display: block;
-    }
+.Bar-Third-Img {
+  height: 5rem;
+  margin: 2.5rem;
 }
-
-
-////////////////////////////////////////
-// HOTEL OVERVIEW
-.overview {
-    display: flex;
-    align-items: center;
-    border-bottom: var(--line);
-
-    &__heading {
-        font-size: 2.25rem;
-        font-weight: 300;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        padding: 1.5rem 3rem;
-
-        @media only screen and (max-width: $bp-small) {
-            font-size: 1.8rem;
-            padding: 1.25rem 2rem;
-        }
-    }
-
-    &__stars {
-        margin-right: auto;
-        display: flex;
-    }
-
-    &__icon-star,
-    &__icon-location {
-        width: 1.75rem;
-        height: 1.75rem;
-        fill: var(--color-primary);
-    }
-
-    &__location {
-        font-size: 1.2rem;
-        display: flex;
-        vertical-align: center;
-    }
-
-    &__icon-location {
-        margin-right: .5rem;
-    }
-
-    &__rating {
-        background-color: var(--color-primary);
-        color: #fff;
-        margin-left: 3rem;
-        padding: 0 2.25rem;
-        align-self: stretch;
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        @media only screen and (max-width: $bp-small) {
-            padding: 0 1.5rem;
-        }
-    }
-
-    &__rating-average {
-        font-size: 2.25rem;
-        font-weight: 300;
-        margin-bottom: -3px;
-
-        @media only screen and (max-width: $bp-small) {
-            font-size: 1.8rem;
-        }
-    }
-
-    &__rating-count {
-        font-size: .8rem;
-        text-transform: uppercase;
-
-        @media only screen and (max-width: $bp-small) {
-            font-size: .5rem;
-        }
-    }
-}
-
-
 
 ////////////////////////////////////////
 // BUTTON INLINE
