--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -239,8 +239,10 @@ body {
     animation: pulsate 1s infinite; }
 
 .container {
-  width: 50rem;
-  height: 50rem;
+  max-width: 50rem;
+  min-width: 25rem;
+  min-height: 50rem;
+  min-height: 10rem;
   padding: 10rem;
   margin: 1rem;
   background-color: var(--color-grey-light-1);
@@ -253,17 +255,12 @@ body {
 
 .header {
   font-size: 1.4rem;
-  height: 7rem;
+  height: 7.5rem;
   background-color: #fff;
   border-bottom: var(--line);
   display: flex;
   justify-content: space-between;
   align-items: center; }
-  @media only screen and (max-width: 31.25em) {
-    .header {
-      flex-wrap: wrap;
-      align-content: space-around;
-      height: 11rem; } }
 
 .content {
   display: flex; }
