--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,8 +37,8 @@ body {
   min-height: 100vh; }
 
 .logo {
-  height: 3.25rem;
-  margin-left: 2rem; }
+  height: 4rem;
+  margin: 2rem; }
 
 .col-sm-6 {
   padding-right: 0; }
@@ -239,8 +239,10 @@ body {
     animation: pulsate 1s infinite; }
 
 .container {
-  width: 50rem;
+  max-width: 50rem;
+  min-width: 25rem;
   min-height: 50rem;
+  min-height: 10rem;
   padding: 10rem;
   margin: 1rem;
   background-color: var(--color-grey-light-1);
@@ -251,20 +253,10 @@ body {
       max-width: 100%;
       width: 100%; } }
 
-.header {
-  font-size: 1.4rem;
-  height: 7rem;
-  background-color: #fff;
+.headerz {
+  background-color: var(--color-primary-1);
   border-bottom: var(--line);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 1rem; }
-  @media only screen and (max-width: 31.25em) {
-    .header {
-      flex-wrap: wrap;
-      align-content: space-around;
-      height: 6rem; } }
+  font-size: 2rem; }
 
 .content {
   display: flex; }
