--- a/public/sass/components/_components.scss
+++ b/public/sass/components/_components.scss
@@ -1,8 +1,9 @@
 ////////////////////////////////////////
 // LOGO
 .logo {
-    height: 3.25rem;
-    margin-left: 2rem;
+    height: 4rem;
+    margin: 2rem;
+
 }
 
 .col-sm-6{
