--- a/public/css/style.css
+++ b/public/css/style.css
@@ -238,6 +238,18 @@ body {
     outline: none;
     animation: pulsate 1s infinite; }
 
+.footerz {
+  background-color: var(--color-primary-3);
+  color: var(--color-grey-light-1);
+  padding: 2rem;
+  font-size: 2rem;
+  height: 7rem; }
+
+.headerz {
+  background-color: var(--color-primary-1);
+  border-bottom: var(--line);
+  font-size: 2rem; }
+
 .container {
   max-width: 50rem;
   min-width: 25rem;
@@ -252,11 +264,6 @@ body {
       margin: 0;
       max-width: 100%;
       width: 100%; } }
-
-.headerz {
-  background-color: var(--color-primary-1);
-  border-bottom: var(--line);
-  font-size: 2rem; }
 
 .content {
   display: flex; }
