--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -240,12 +240,10 @@ body {
 
 .footerz {
   background-color: var(--color-primary-3);
-  border-bottom: var(--line);
-  font-size: 2rem;
   color: var(--color-grey-light-1);
-  height: 10rem;
-  position: absolute;
-  bottom: 0; }
+  padding: 2rem;
+  font-size: 2rem;
+  height: 10rem; }
 
 .headerz {
   background-color: var(--color-primary-1);
