--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,8 +52,10 @@ body {
   clip-path: polygon(50% 0%, 100% 0, 100% 50%, 50% 100%, 0% 50%, 0 0); }
 
 .Bar-Second-Text {
-  font-size: 25px;
-  color: var(--color-primary-1); }
+  font-size: 24px;
+  color: var(--color-primary-1);
+  /* width: calc(100% - 50px); */
+  margin: auto; }
 
 .Bar-Third {
   background-color: var(--color-grey-dark-3);
