--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,13 @@
   width:100%;
   color: white;
   background: black;
-  height: 11rem;
   font-size: 15px;
 
 }
 
-.logo-container{
-  display: flex;
-  justify-content: space-between;
-}
+.logo-container img{
+  margin-right: 8px;
+} 
 
 .footer-body{
   display: flex;
@@ -19,7 +17,6 @@
 }
 
 .image-label{
-  margin-top: 300px;
   width: 310px;  
   font-size:20px;
   color: white;
@@ -29,5 +26,10 @@
   right: 0;
   display: flex;
   flex-direction: column;
+  top: 50%;
+  transform:translateY(-50%);
 }
 
+@media only screen and (max-width: 360px){
+  
+}
