--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -13,5 +13,6 @@
 @import "layout/footer";
 @import "layout/header";
 @import "layout/navigation";
+@import "layout/container";
 
 @import "pages/landingpage";
