--- a/public/sass/abstracts/_variables.scss
+++ b/public/sass/abstracts/_variables.scss
@@ -12,6 +12,9 @@
     --color-grey-dark-2: #777;
     --color-grey-dark-3: #999;
 
+    --color-container-1: #ffbe76;
+    --color-container-2: #f0932b;
+
     --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
     --shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
 
