--- a/public/sass/layout/_container.scss
+++ b/public/sass/layout/_container.scss
@@ -1,14 +1,60 @@
-.containerrr {
-    width: 25%;
-    height: 50rem;
-    padding: 2.5rem;
-    margin: 5rem;
-    position: center;
-
-    background-color: var(--color-primary-2)
-}
-
-.containerz {
+.container-login {
   display: flex;
   justify-content: center;
+}
+
+.containerrr {
+    width: 40rem;
+    height: 80rem;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+    position: center;
+    font-size: 2rem;
+
+    &__small{
+      font-size: 1rem;
+    }
+
+    &__row1{
+      background-color: var(--color-container-1);
+      padding: 2rem;
+    }
+
+    &__icon{
+      height: 20rem;
+      width: 120px;
+      margin-left: 120px;
+      margin-right: 120px;
+    }
+
+    &__form {
+      padding-top: 2rem;
+    }
+
+    &__row2{
+      background-color: var(--color-container-2);
+      margin-top: 0rem;
+    }
+
+    &__button{
+      padding-left: 2rem;
+      padding-right: 2rem;
+      padding-top: 4rem;
+      padding-bottom: 4rem;
+    }
+
+    &__row3{
+      background-color: var(--color-container-1);
+      color: var(--color-grey-light-1);
+      display: flex;
+      justify-content: center;
+    }
+
+    &__label{
+      padding-left: 1rem;
+      padding-right: 1rem;
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+      align-content: center;
+    }
 }
