--- a/public/sass/components/_base.scss
+++ b/public/sass/components/_base.scss
@@ -32,3 +32,15 @@ body {
 
     min-height: 100vh;
 }
+
+////////////////////////////////////////
+// LOGO
+.logo {
+    height: 4rem;
+    margin: 2rem;
+
+}
+
+.col-sm-6{
+  padding-right: 0;
+}
