--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,9 +32,6 @@ body {
   height: 4rem;
   margin: 2rem; }
 
-.col-sm-6 {
-  padding-right: 0; }
-
 :root {
   --color-primary-1: #f2f3ee;
   --color-primary-2: #e5b721;
@@ -112,42 +109,59 @@ body {
     flex-direction: column;
     justify-content: center; }
 
-.footer {
-  width: 100%;
-  color: white;
-  background: black;
-  font-size: 15px; }
+.Bar-First {
+  margin: 0rem; }
+  .Bar-First__col1 {
+    padding: 0rem !important; }
+  .Bar-First__col2 {
+    padding: 0rem !important;
+    position: relative !important; }
+  .Bar-First__banner {
+    width: 100%;
+    float: left !important;
+    max-width: 100%;
+    height: auto; }
+  .Bar-First__label {
+    width: 300px;
+    font-size: 25px;
+    color: white;
+    background-color: black;
+    opacity: 0.65;
+    position: absolute;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    top: 70%;
+    transform: translateY(-50%); }
+    .Bar-First__label__TextTop {
+      margin-bottom: 10px; }
+    .Bar-First__label__TextBottom {
+      font-weight: bolder; }
 
-.logo-container img {
-  margin-right: 8px; }
-
-.footer-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center; }
-
-.image-label {
-  width: 300px;
-  font-size: 25px;
-  color: white;
-  background-color: black;
-  opacity: 0.65;
-  position: absolute;
-  right: 0;
-  display: flex;
-  flex-direction: column;
-  top: 70%;
-  transform: translateY(-50%); }
-
-.image-label-text-top {
-  margin-bottom: 10px; }
-
-.image-label-text-bottom {
-  font-weight: bolder; }
+.Bar-Second {
+  background-color: var(--color-primary-2);
+  height: 10rem;
+  clip-path: polygon(50% 0%, 100% 0, 100% 50%, 50% 100%, 0% 50%, 0 0); }
+  .Bar-Second__Text {
+    font-size: 4rem;
+    color: var(--color-primary-1); }
 
 @media screen and (max-width: 574px) and (min-width: 300px) {
   .Bar-Second-Text {
     font-size: 21.7px; } }
+
+.Bar-Third {
+  background-color: var(--color-grey-light-4);
+  height: 11rem;
+  padding: 0rem; }
+  .Bar-Third__clip {
+    clip-path: polygon(50% 0%, 100% 0, 100% 50%, 50% 100%, 0% 50%, 0 0);
+    background-color: var(--white);
+    margin: 0rem;
+    padding: 0rem; }
+  .Bar-Third__img {
+    height: 5rem;
+    margin: 3rem; }
 
 .Navbarz {
   background-color: var(--color-primary-1);
