--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -1,54 +1,3 @@
-* {
-  margin: 0;
-  padding: 0; }
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit; }
-
-html {
-  box-sizing: border-box;
-  font-size: 62.5%; }
-  @media only screen and (max-width: 68.75em) {
-    html {
-      font-size: 50%; } }
-
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-  line-height: 1.6;
-  color: var(--color-grey-dark-2);
-  min-height: 100vh; }
-
-.logo {
-  height: 4rem;
-  margin: 2rem; }
-
-.col-sm-6 {
-  padding-right: 0; }
-
-.logo {
-  height: 4rem;
-  margin: 2rem; }
-
-:root {
-  --color-primary-1: #f2f3ee;
-  --color-primary-2: #e5b721;
-  --color-primary-3: #221f1f;
-  --color-grey-light-1: #faf9f9;
-  --color-grey-light-2: #f4f2f2;
-  --color-grey-light-3: #f0eeee;
-  --color-grey-light-4: #ccc;
-  --color-grey-dark-1: #333;
-  --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999;
-  --color-container-1: #ffbe76;
-  --color-container-2: #f0932b;
-  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
-  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
-  --line: 1px solid var(--color-grey-light-2); }
-
 .container {
   width: 35rem;
   padding: 5rem;
@@ -109,6 +58,31 @@ body {
     flex-direction: column;
     justify-content: center; }
 
+.Navbarz {
+  background-color: var(--color-primary-1);
+  border-bottom: var(--line);
+  padding: 2rem;
+  font-size: 2rem; }
+  .Navbarz__List {
+    color: black;
+    padding-top: 20px !important;
+    padding-bottom: 20px !important; }
+    .Navbarz__List:hover {
+      color: white !important;
+      background-color: #e5b721;
+      padding-top: 20px !important;
+      padding-bottom: 20px !important; }
+  .Navbarz__ContactUs {
+    color: black;
+    margin-right: 20px;
+    padding-top: 20px !important;
+    padding-bottom: 20px !important; }
+    .Navbarz__ContactUs:hover {
+      color: white !important;
+      background-color: #e5b721;
+      padding-top: 20px !important;
+      padding-bottom: 20px !important; }
+
 .Bar-First {
   margin: 0rem; }
   .Bar-First__col1 {
@@ -163,27 +137,56 @@ body {
     height: 5rem;
     margin: 3rem; }
 
-.Navbarz {
-  background-color: var(--color-primary-1);
-  border-bottom: var(--line);
-  padding: 2rem;
-  font-size: 2rem; }
-  .Navbarz__List {
-    color: black;
-    padding-top: 20px !important;
-    padding-bottom: 20px !important; }
-    .Navbarz__List:hover {
-      color: white !important;
-      background-color: #e5b721;
-      padding-top: 20px !important;
-      padding-bottom: 20px !important; }
-  .Navbarz__ContactUs {
-    color: black;
-    margin-right: 20px;
-    padding-top: 20px !important;
-    padding-bottom: 20px !important; }
-    .Navbarz__ContactUs:hover {
-      color: white !important;
-      background-color: #e5b721;
-      padding-top: 20px !important;
-      padding-bottom: 20px !important; }
+.product {
+  background-color: var(--color-primary-3); }
+
+* {
+  margin: 0;
+  padding: 0; }
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit; }
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; }
+  @media only screen and (max-width: 68.75em) {
+    html {
+      font-size: 50%; } }
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
+  color: var(--color-grey-dark-2);
+  min-height: 100vh; }
+
+.logo {
+  height: 4rem;
+  margin: 2rem; }
+
+.col-sm-6 {
+  padding-right: 0; }
+
+.logo {
+  height: 4rem;
+  margin: 2rem; }
+
+:root {
+  --color-primary-1: #f2f3ee;
+  --color-primary-2: #e5b721;
+  --color-primary-3: #221f1f;
+  --color-grey-light-1: #faf9f9;
+  --color-grey-light-2: #f4f2f2;
+  --color-grey-light-3: #f0eeee;
+  --color-grey-light-4: #ccc;
+  --color-grey-dark-1: #333;
+  --color-grey-dark-2: #777;
+  --color-grey-dark-3: #999;
+  --color-container-1: #ffbe76;
+  --color-container-2: #f0932b;
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+  --line: 1px solid var(--color-grey-light-2); }
