--- a/public/css/style.css
+++ b/public/css/style.css
@@ -187,3 +187,6 @@ body {
       background-color: #e5b721;
       padding-top: 20px !important;
       padding-bottom: 20px !important; }
+
+.product {
+  background-color: var(--color-primary-3); }
