finishing login and signup

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -6,6 +6,9 @@
 //pages
 @import "pages/landingpage";
 @import "pages/product";
+@import "pages/signup";
+@import "pages/login";
+
 
 // reuseable components
 @import "reusable/animations";
