--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,104 +1,3 @@
-* {
-  margin: 0;
-  padding: 0; }
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit; }
-
-html {
-  box-sizing: border-box;
-  font-size: 62.5%; }
-  @media only screen and (max-width: 68.75em) {
-    html {
-      font-size: 50%; } }
-
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-  line-height: 1.6;
-  color: var(--color-grey-dark-2);
-  min-height: 100vh; }
-
-.logo {
-  height: 4rem;
-  margin: 2rem; }
-
-.col-sm-6 {
-  padding-right: 0; }
-
-.logo {
-  height: 4rem;
-  margin: 2rem; }
-
-:root {
-  --color-primary-1: #f2f3ee;
-  --color-primary-2: #e5b721;
-  --color-primary-3: #221f1f;
-  --color-grey-light-1: #faf9f9;
-  --color-grey-light-2: #f4f2f2;
-  --color-grey-light-3: #f0eeee;
-  --color-grey-light-4: #ccc;
-  --color-grey-dark-1: #333;
-  --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999;
-  --color-container-1: #ffbe76;
-  --color-container-2: #f0932b;
-  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
-  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
-  --line: 1px solid var(--color-grey-light-2); }
-
-.container {
-  width: 35rem;
-  padding: 5rem;
-  margin: 10rem;
-  background-color: var(--color-grey-light-1);
-  box-shadow: var(--shadow-dark); }
-
-.container-login {
-  display: flex;
-  justify-content: center; }
-
-.containerrr {
-  width: 40rem;
-  height: 80rem;
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-  position: center;
-  font-size: 2rem; }
-  .containerrr__small {
-    font-size: 1rem; }
-  .containerrr__row1 {
-    background-color: var(--color-container-1);
-    padding: 2rem; }
-  .containerrr__icon {
-    height: 20rem;
-    width: 120px;
-    margin-left: 120px;
-    margin-right: 120px; }
-  .containerrr__form {
-    padding-top: 2rem; }
-  .containerrr__row2 {
-    background-color: var(--color-container-2);
-    margin-top: 0rem; }
-  .containerrr__button {
-    padding-left: 2rem;
-    padding-right: 2rem;
-    padding-top: 4rem;
-    padding-bottom: 4rem; }
-  .containerrr__row3 {
-    background-color: var(--color-container-1);
-    color: var(--color-grey-light-1);
-    display: flex;
-    justify-content: center; }
-  .containerrr__label {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    align-content: center; }
-
 .footerz {
   width: 100%;
   color: white;
@@ -108,6 +7,31 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center; }
+
+.Navbarz {
+  background-color: var(--color-primary-1);
+  border-bottom: var(--line);
+  padding: 2rem;
+  font-size: 2rem; }
+  .Navbarz__List {
+    color: black;
+    padding-top: 20px !important;
+    padding-bottom: 20px !important; }
+    .Navbarz__List:hover {
+      color: white !important;
+      background-color: #e5b721;
+      padding-top: 20px !important;
+      padding-bottom: 20px !important; }
+  .Navbarz__ContactUs {
+    color: black;
+    margin-right: 20px;
+    padding-top: 20px !important;
+    padding-bottom: 20px !important; }
+    .Navbarz__ContactUs:hover {
+      color: white !important;
+      background-color: #e5b721;
+      padding-top: 20px !important;
+      padding-bottom: 20px !important; }
 
 .Bar-First {
   margin: 0rem; }
@@ -163,30 +87,132 @@ body {
     height: 5rem;
     margin: 3rem; }
 
-.Navbarz {
-  background-color: var(--color-primary-1);
-  border-bottom: var(--line);
-  padding: 2rem;
-  font-size: 2rem; }
-  .Navbarz__List {
-    color: black;
-    padding-top: 20px !important;
-    padding-bottom: 20px !important; }
-    .Navbarz__List:hover {
-      color: white !important;
-      background-color: #e5b721;
-      padding-top: 20px !important;
-      padding-bottom: 20px !important; }
-  .Navbarz__ContactUs {
-    color: black;
-    margin-right: 20px;
-    padding-top: 20px !important;
-    padding-bottom: 20px !important; }
-    .Navbarz__ContactUs:hover {
-      color: white !important;
-      background-color: #e5b721;
-      padding-top: 20px !important;
-      padding-bottom: 20px !important; }
-
 .product {
   background-color: var(--color-primary-3); }
+
+.containerSignUp {
+  width: 40rem;
+  height: 80rem;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+  font-size: 2rem; }
+  .containerSignUp__small {
+    font-size: 1rem; }
+  .containerSignUp__row1 {
+    background-color: var(--color-container-1);
+    padding: 2rem; }
+  .containerSignUp__icon {
+    height: 10rem;
+    align-items: center; }
+  .containerSignUp__form {
+    padding-top: 2rem; }
+  .containerSignUp__row2 {
+    background-color: var(--color-container-2);
+    margin-top: 0rem;
+    padding: 2rem; }
+  .containerSignUp__row3 {
+    background-color: var(--color-container-1);
+    margin-top: 0rem; }
+  .containerSignUp__button {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem; }
+
+.container {
+  width: 35rem;
+  padding: 5rem;
+  margin: 10rem;
+  background-color: var(--color-grey-light-1);
+  box-shadow: var(--shadow-dark); }
+
+.container-login {
+  display: flex;
+  justify-content: center; }
+
+.containerrr {
+  width: 40rem;
+  height: 80rem;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+  font-size: 2rem; }
+  .containerrr__small {
+    font-size: 1rem; }
+  .containerrr__row1 {
+    background-color: var(--color-container-1);
+    padding: 2rem; }
+  .containerrr__icon {
+    height: 20rem;
+    align-items: center; }
+  .containerrr__form {
+    padding-top: 2rem; }
+  .containerrr__row2 {
+    background-color: var(--color-container-2);
+    margin-top: 0rem; }
+  .containerrr__button {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem; }
+  .containerrr__row3 {
+    background-color: var(--color-container-1);
+    color: var(--color-grey-light-1);
+    display: flex;
+    justify-content: center; }
+  .containerrr__label {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    align-content: center; }
+
+* {
+  margin: 0;
+  padding: 0; }
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit; }
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; }
+  @media only screen and (max-width: 68.75em) {
+    html {
+      font-size: 50%; } }
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
+  color: var(--color-grey-dark-2);
+  min-height: 100vh; }
+
+.logo {
+  height: 4rem;
+  margin: 2rem; }
+
+.col-sm-6 {
+  padding-right: 0; }
+
+.logo {
+  height: 4rem;
+  margin: 2rem; }
+
+:root {
+  --color-primary-1: #f2f3ee;
+  --color-primary-2: #e5b721;
+  --color-primary-3: #221f1f;
+  --color-grey-light-1: #faf9f9;
+  --color-grey-light-2: #f4f2f2;
+  --color-grey-light-3: #f0eeee;
+  --color-grey-light-4: #ccc;
+  --color-grey-dark-1: #333;
+  --color-grey-dark-2: #777;
+  --color-grey-dark-3: #999;
+  --color-container-1: #ffbe76;
+  --color-container-2: #f0932b;
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+  --line: 1px solid var(--color-grey-light-2); }
