--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,81 +90,77 @@
 .product {
   background-color: var(--color-primary-3); }
 
-.containerSignUp {
-  width: 40rem;
-  height: 80rem;
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-  font-size: 2rem; }
-  .containerSignUp__small {
-    font-size: 1rem; }
-  .containerSignUp__row1 {
-    background-color: var(--color-container-1);
-    padding: 2rem; }
-  .containerSignUp__icon {
-    height: 10rem;
-    align-items: center; }
-  .containerSignUp__form {
-    padding-top: 2rem; }
-  .containerSignUp__row2 {
-    background-color: var(--color-container-2);
-    margin-top: 0rem;
-    padding: 2rem; }
-  .containerSignUp__row3 {
-    background-color: var(--color-container-1);
-    margin-top: 0rem; }
-  .containerSignUp__button {
-    padding-left: 2rem;
-    padding-right: 2rem;
-    padding-top: 4rem;
-    padding-bottom: 4rem; }
-
-.container {
-  width: 35rem;
-  padding: 5rem;
-  margin: 10rem;
-  background-color: var(--color-grey-light-1);
-  box-shadow: var(--shadow-dark); }
-
-.container-login {
+.Signup {
   display: flex;
   justify-content: center; }
+  .Signup__container {
+    width: 40rem;
+    height: 100%;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+    font-size: 2rem; }
+    .Signup__container__small {
+      font-size: 1rem; }
+    .Signup__container__row1 {
+      background-color: var(--color-container-1);
+      padding: 2rem; }
+    .Signup__container__icon {
+      height: 15rem;
+      align-items: center; }
+    .Signup__container__form {
+      padding-top: 2rem; }
+    .Signup__container__row2 {
+      background-color: var(--color-container-2);
+      margin-top: 0rem;
+      padding: 2rem; }
+    .Signup__container__row3 {
+      background-color: var(--color-container-1);
+      margin-top: 0rem; }
+    .Signup__container__button {
+      padding-left: 2rem;
+      padding-right: 2rem;
+      padding-top: 4rem;
+      padding-bottom: 4rem; }
 
-.containerrr {
-  width: 40rem;
-  height: 80rem;
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-  font-size: 2rem; }
-  .containerrr__small {
-    font-size: 1rem; }
-  .containerrr__row1 {
-    background-color: var(--color-container-1);
-    padding: 2rem; }
-  .containerrr__icon {
-    height: 20rem;
-    align-items: center; }
-  .containerrr__form {
-    padding-top: 2rem; }
-  .containerrr__row2 {
-    background-color: var(--color-container-2);
-    margin-top: 0rem; }
-  .containerrr__button {
-    padding-left: 2rem;
-    padding-right: 2rem;
-    padding-top: 4rem;
-    padding-bottom: 4rem; }
-  .containerrr__row3 {
-    background-color: var(--color-container-1);
-    color: var(--color-grey-light-1);
-    display: flex;
-    justify-content: center; }
-  .containerrr__label {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    align-content: center; }
+.Login {
+  display: flex;
+  justify-content: center; }
+  .Login__container {
+    width: 40rem;
+    height: 100%;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+    font-size: 2rem;
+    box-shadow: var(--shadow-dark); }
+    .Login__container__small {
+      font-size: 1rem; }
+    .Login__container__row1 {
+      background-color: var(--color-container-1);
+      padding: 2rem; }
+    .Login__container__icon {
+      height: 15rem;
+      align-items: center; }
+    .Login__container__form {
+      padding-top: 2rem; }
+    .Login__container__row2 {
+      background-color: var(--color-container-2);
+      margin-top: 0rem; }
+    .Login__container__button {
+      padding-left: 2rem;
+      padding-right: 2rem;
+      padding-top: 4rem;
+      padding-bottom: 4rem; }
+    .Login__container__row3 {
+      background-color: var(--color-container-1);
+      color: var(--color-grey-light-1);
+      display: flex;
+      justify-content: center; }
+    .Login__container__label {
+      padding-left: 1rem;
+      padding-right: 1rem;
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+      align-content: center; }
 
 * {
   margin: 0;
