--- a/public/sass/reusable/_variables.scss
+++ b/public/sass/reusable/_variables.scss
@@ -15,6 +15,9 @@
     --color-container-1: #ffbe76;
     --color-container-2: #f0932b;
 
+    --color-footer: #101d2c;
+    --color-footer-text: #aaa;
+
     --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
     --shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
 
