--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -1,11 +1,65 @@
-.footerz{
-  width:100%;
-  color: white;
-  background: black;
-  font-size: 15px;
-  &__body{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.footerz {
+    background-color: var(--color-footer);
+    grid-column: full-start / full-end;
+    padding: 8rem;
+}
+
+.navfooter {
+    list-style: none;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    grid-gap: 2rem;
+    align-items: center;
+
+    &__link:link,
+    &__link:visited {
+        font-size: 1.4rem;
+        color: #fff;
+        text-decoration: none;
+        text-transform: uppercase;
+        text-align: center;
+        padding: 1.5rem;
+        display: block;
+        transition: all .2s;
+    }
+
+    &__link:hover,
+    &__link:active {
+        background-color: rgba(#fff, .05);
+        transform: translateY(-3px);
+    }
+}
+
+.linkfooter{
+  &:link,
+  &:visited {
+      font-size: 1.4rem;
+      color: #fff;
+      text-decoration: none;
+      text-transform: uppercase;
+      text-align: center;
+      padding: 1.5rem;
+      display: block;
+      transition: all .2s;
   }
+
+  &:hover,
+  &:active {
+    background-color: var(--color-grey-dark-1);
+    transform: translateY(-3px);
+  }
+}
+
+.copyright {
+    font-size: 1.4rem;
+    color: var(--color-footer-text);
+    margin-top: 6rem;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    width: 70%;
+    &:hover {
+      color:yellow;
+    }
 }
