adding how it works and about page

--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -3,24 +3,26 @@
   grid-column: full-start / full-end;
   padding: 8rem; }
 
-.navf {
+.navfooter {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   grid-gap: 2rem;
   align-items: center; }
-  .navf__link:link, .navf__link:visited {
-    font-size: 1.4rem;
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
-    text-align: center;
-    padding: 1.5rem;
-    display: block;
-    transition: all .2s; }
-  .navf__link:hover, .navf__link:active {
-    background-color: rgba(255, 255, 255, 0.05);
-    transform: translateY(-3px); }
+
+.linkfooter:link, .linkfooter:visited {
+  font-size: 1.4rem;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 1.5rem;
+  display: block;
+  transition: all .2s; }
+
+.linkfooter:hover, .linkfooter:active {
+  background-color: var(--color-grey-dark-1);
+  transform: translateY(-3px); }
 
 .copyright {
   font-size: 1.4rem;
@@ -192,6 +194,12 @@
       padding-top: 2rem;
       padding-bottom: 2rem;
       align-content: center; }
+
+.product {
+  background-color: var(--color-primary-3); }
+
+.product {
+  background-color: var(--color-primary-3); }
 
 * {
   margin: 0;
