--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -8,7 +8,8 @@
 @import "pages/product";
 @import "pages/signup";
 @import "pages/login";
-
+@import "pages/aboutus";
+@import "pages/howitworks";
 
 // reuseable components
 @import "reusable/animations";
