--- a/public/css/style.css
+++ b/public/css/style.css
@@ -196,20 +196,21 @@
       align-content: center; }
 
 .AboutUs {
-  height: 100rem;
+  height: 75rem;
   width: 100%;
   background-color: var(--danger);
   display: flex;
   justify-content: center;
-  align-content: center; }
+  align-items: center; }
 
 .HowItWorks {
-  height: 100rem;
+  height: 75rem;
   width: 100%;
   background-color: var(--blue);
   display: flex;
-  justify-content: center;
-  align-content: center; }
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
 
 * {
   margin: 0;
