--- a/public/sass/pages/_aboutus.scss
+++ b/public/sass/pages/_aboutus.scss
@@ -1,9 +1,9 @@
 .AboutUs{
-  height: 100rem;
+  height: 75rem;
   width: 100%;
   background-color: var(--danger);
 
   display: flex;
   justify-content: center;
-  align-content: center;
+  align-items: center;
 }
