--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -1,5 +1,6 @@
 .HomeContainer{
   background-color: var(--color-primary-2);
+  margin: 0rem !important;
 }
 
 .TabsHome{
@@ -51,4 +52,8 @@
     padding-right: 2rem;
     padding-left: 2rem;
   }
+}
+
+.rowz {
+  margin: 0rem !important;
 }
