--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,11 +213,28 @@
   background-color: var(--color-primary-3); }
 
 .HomeContainer {
-  background-color: var(--color-primary-2); }
+  background-color: var(--color-grey-dark-1);
+  color: white !important;
+  margin: 0rem !important; }
+
+.carouselHome {
+  width: 100%;
+  height: 25rem; }
 
 .TabsHome {
   width: 25% !important;
-  text-align: center !important; }
+  height: 5rem !important;
+  text-align: center !important;
+  margin: 0rem !important; }
+  .TabsHome__link {
+    height: 100%;
+    display: flex !important;
+    flex-direction: column !important;
+    justify-content: center !important;
+    border: 0.25rem solid var(--color-primary-3) !important; }
+    .TabsHome__link:hover {
+      color: black !important;
+      background-color: var(--color-primary-2); }
 
 .TabsPane1 {
   margin: 0rem;
@@ -240,31 +257,44 @@
   .dropz__item {
     min-width: 0rem !important;
     width: 8rem !important;
+    display: flex;
+    flex-direction: column;
     text-align: center !important; }
+    .dropz__item:hover {
+      color: black !important;
+      background-color: var(--color-primary-2); }
+    .dropz__item__nominal {
+      width: 33.3%; }
 
 .HomeBanner2 {
   height: 15rem;
   width: 100%;
+  margin: 0rem !important;
   background-color: var(--orange); }
   .HomeBanner2__text1 {
     font-size: 2rem;
-    padding: 2rem; }
+    padding: 2rem;
+    margin: 0rem !important; }
   .HomeBanner2__text2 {
     font-size: 1rem;
     padding-right: 2rem;
-    padding-left: 2rem; }
+    padding-left: 2rem;
+    margin: 0rem !important; }
 
 .HomeBanner3 {
   height: 15rem;
   width: 100%;
+  margin: 0rem !important;
   background-color: var(--danger); }
   .HomeBanner3__text1 {
     font-size: 2rem;
-    padding: 2rem; }
+    padding: 2rem;
+    margin: 0rem !important; }
   .HomeBanner3__text2 {
     font-size: 1rem;
     padding-right: 2rem;
-    padding-left: 2rem; }
+    padding-left: 2rem;
+    margin: 0rem !important; }
 
 * {
   margin: 0;
